Fixed extra space after view course

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,8 +342,7 @@ header{
     margin: 0 auto;
 }
 .hidden{
-	height: 0;
-    visibility: hidden;
+    display: none;
 }
 .show-courses{
 	color: #4ab;
